tests/rosetta/transpiler/FS/date-manipulation.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/date-manipulation.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Date-manipulation' based on the file name 'date-manipulation.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/date-manipulation.fs(280,46): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    
